--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,8 +14,8 @@ pipeline {
   }
   stage('Restore packages') {
   steps {
-    bat "dotnet restore ${workspace}
-    ./DemoApp.sln"
+    bat "dotnet restore ${workspace} \\"./"\\"./DemoApp.sln"
+    
   }
 }
   
