--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
   }
   stage('Restore packages') {
   steps {
-    bat "dotnet restore ${workspace} "./" "./DemoApp.sln"
+    bat "dotnet restore ${workspace} "C:\Users\sanjeev.kumar11\.jenkins\workspace\pipelineone" "./DemoApp.sln"
     
   }
 }
