--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
 }
 stage('Clean') {
   steps {
-    bat "msbuild.exe ${workspace} DemoApp/DemoApp.sln /nologo /nr:false /p:platform=\"x64\" /p:configuration=\"release\" /t:clean"
+    bat "msbuild.exe ${workspace} DemoApp/DemoApp.sln" /nologo /nr:false /p:platform=\"x64\" /p:configuration=\"release\" /t:clean"
   }
 }
 stage('Build') {
