--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,11 +18,11 @@ pipeline {
     
   }
 }
-stage('Clean') {
-  steps {
-    bat "msbuild.exe ${workspace} DemoApp/DemoApp.sln /nologo /nr:false /p:platform=\"x64\" /p:configuration=\"release\" /t:clean"
-  }
-}
+//stage('Clean') {
+ // steps {
+   // bat "msbuild.exe ${workspace} DemoApp/DemoApp.sln /nologo /nr:false /p:platform=\"x64\" /p:configuration=\"release\" /t:clean"
+  //}
+//}
 stage('Build') {
  steps {
   bat "msbuild.exe ${workspace} DemoApp/DemoApp.sln /nologo /nr:false  /p:platform=\"x64\" /p:configuration=\"release\"  /t:clean;restore;rebuild"
