--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,36 +2,24 @@ pipeline {
     agent any
 
     stages {
-        stage ('Clean workspace') {
-  		steps {
-    		cleanWs()
-  		}
-	}
-	stage ('Git Checkout') {
-  steps {
-      git branch: 'master', url: 'https://github.com/Sanjeevk13/CIPipeline.git'
-    }
-  }
-  stage('Restore packages') {
-  steps {
-    bat "dotnet restore ${workspace} DemoApp/DemoApp.sln"
-    
-  }
-}
-//stage('Clean') {
- // steps {
-   // bat "msbuild.exe ${workspace} DemoApp/DemoApp.sln /nologo /nr:false /p:platform=\"x64\" /p:configuration=\"release\" /t:clean"
-  //}
-//}
-stage('Build') {
- steps {
-  bat "msbuild.exe ${workspace} DemoApp/DemoApp.sln /nologo /nr:false  /p:platform=\"x64\" /p:configuration=\"release\"  /t:clean;restore;rebuild"
- }
-}
-  
-  
-    }
-        
+        stage('Build') {
+            steps {
+                echo 'Building..'
+		powershell "& .\\build.ps1 -t JenkinsBuild"
+                echo 'Build finished'
+            }
+        }
+        stage('Test') {
+            steps {
+                echo 'Testing..'
+            }
+        }
+        stage('Deploy') {
+            steps {
+                echo 'Deploying....'
+            }
+        }
+
         
  post {
         success{
