--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,11 +1,11 @@
 pipeline {
-    agent any
+    agent {label 'windows'}
 
     stages {
         stage('Build') {
             steps {
                 echo 'Building..'
-		powershell "& .\\build.ps1 -t JenkinsBuild"
+		powershell "& .\\build.ps1 --target JenkinsBuild"
                 echo 'Build finished'
             }
         }
